edits to Error Analysis

--- a/Alg_Design.tex
+++ b/Alg_Design.tex
@@ -2,7 +2,7 @@
 
 \section{UKF Formulation} \label{sec:ukf_formulation}
 
-In this section, we develop a formulation of the Unscented Kalman Filter for estimating the state of a quadcopter based in part on example MATLAB code from \cite{Cao2010}. We begin with the two overarching phases of the algorithm, prediction and correction. Then we develop a kinematic process model which describes the vehicle's motion over time. After this, we develop an observation model which describes the relationship between the vehicle's state and the vehicle's sensor readings. Finally, we explore noise models which describe the Gaussian noise present in both the process and observation models.
+In this section, we develop a formulation of the Unscented Kalman Filter for estimating the state of a quadcopter based in large part on example MATLAB code from \cite{Cao2010}. We begin with the two overarching phases of the algorithm, prediction and correction. Then we develop a kinematic process model which describes the vehicle's motion over time. After this, we develop an observation model which describes the relationship between the vehicle's state and the vehicle's sensor readings. Finally, we explore noise models which describe the Gaussian noise present in both the process and observation models.
 
 \subsection{Prediction Step} \label{sec:Prediction_Step}
 
@@ -34,9 +34,9 @@ and let $n = 16$ represent the number of state variables.
 Let $\mathbf{P} \in \mathbb{R}^{n \times n}$ be the covariance matrix associated with the state $\mathbf{x}$. A set of $2n + 1$ sigma points is then derived from $\mathbf{x}$ and $\mathbf{P}$ as
 %
 \begin{align}
-\bm{\chi}^{0}_{k-1 | k-1} &= \mathbf{x}_{k-1 | k-1} \nonumber\\
-\bm{\chi}^{i}_{k-1 | k-1} &= \mathbf{x}_{k-1 | k-1} + \left( \sqrt{\left( n + \lambda \right) \mathbf{P}_{k-1 | k-1}} \right)_{i}, &&i = 1,\ \dots,\ n \\
-\bm{\chi}^{i}_{k-1 | k-1} &= \mathbf{x}_{k-1 | k-1} - \left( \sqrt{\left( n + \lambda \right) \mathbf{P}_{k-1 | k-1}} \right)_{i-n}, &&i = n+1,\ \dots,\ 2n \nonumber
+\bm{\chi}^{0}_{k | k-1} &= \mathbf{x}_{k-1 | k-1} \nonumber\\
+\bm{\chi}^{i}_{k | k-1} &= \mathbf{x}_{k-1 | k-1} + \left( \sqrt{\left( n + \lambda \right) \mathbf{P}_{k-1 | k-1}} \right)_{i}, &&i = 1,\ \dots,\ n \\
+\bm{\chi}^{i}_{k | k-1} &= \mathbf{x}_{k-1 | k-1} - \left( \sqrt{\left( n + \lambda \right) \mathbf{P}_{k-1 | k-1}} \right)_{i-n}, &&i = n+1,\ \dots,\ 2n \nonumber
 \end{align}
 %
 where $\bm{\chi}^{i}$ is the $i$-th sigma point and $\left( \sqrt{\left( n + \lambda \right) \mathbf{P}_{k-1 | k-1}} \right)_{i}$ is the $i$-th column of the square root matrix $\sqrt{\left( n + \lambda \right) \mathbf{P}_{k-1 | k-1}}$. The square root matrix $\mathbf{A}$ of a matrix $\mathbf{B}$ is defined here as
@@ -136,13 +136,15 @@ The corrected covariance $\mathbf{P}_{k | k}$ is the difference between the pred
 
 \subsection{Process Model} \label{Process_Model}
 
-To propagate the vehicle's state forward in time, we perform a number of integration operations on the linear accelerations and angular rates measured by the IMU. To determine the orientation of the vehicle at some time $k$, we integrate the measured angular rate vector $\bm{\Omega}_{\text{meas.}}$ per the relationship given in \cite{Stevens2015},
+Here we develop a process model for a small rotorcraft based on a similar model presented in \cite{Weiss2012_2}. This process model propagates the vehicle's state forward in time by performing a number of integration operations on the linear accelerations and angular rates measured by the IMU.
+
+To determine the orientation of the vehicle at some time $k$, we integrate the measured angular rate vector $\bm{\Omega}_{\text{meas.}}$ per the relationship given in \cite{Stevens2015},
 %
 \begin{equation} \label{eq:proc_quat}
 \mathbf{q}_{k} = \mathbf{q}_{k-1} + \frac{1}{2} \mathbf{\Theta} \left( \bm{\Omega}_{k} \right) \mathbf{q}_{k-1} \Delta t
 \end{equation}
 %
-where $\mathbf{\Theta} \left( \bm{\Omega}_{k} \right) \in \mathbb{R}^{4 \times 4}$ is the angular rate integration matrix defined by
+where $\mathbf{\Theta} \left( \bm{\Omega}_{k} \right) \in \mathbb{R}^{4 \times 4}$ is the quaternion multiplication matrix defined by
 %
 \begin{equation}
 \mathbf{\Theta} \left( \bm{\Omega}_{k} \right) =
