general revisions and marked up plots

--- a/Acknowledgments.tex
+++ b/Acknowledgments.tex
@@ -2,7 +2,7 @@
 
 This work would not have been possible were it not for my graduate adviser and committee chair, Dr.~Kevin Kochersberger. He has been a constant source of support since October 2012 when he provided my friends and me with lab space in which to design our first competition robots. Over the ensuing five years, Dr.~Kochersberger has played a pivotal role in my development as an engineer and researcher. He demonstrates his commitment to nurturing students every day by giving tirelessly of his time and energy.
 
-It is also my pleasure to thank Dr.~Danette Allen of the NASA Langley Autonomy Incubator, who provided me with two summer internships in her lab and taught me much of what I know today about Kalman filtering. Dr.~Allen supplied me with both funding and equipment in order to perform this research, even going so far as to allow me to use her lab's motion capture facilities for my experiments.
+It is also my pleasure to thank Dr.~Danette Allen of the NASA Langley Autonomy Incubator (now the Intelligent Flight Systems and Autonomy Innovation Laboratory), who provided me with two summer internships in her lab and taught me much of what I know today about Kalman filtering. Dr.~Allen supplied me with both funding and equipment in order to perform this research, even going so far as to allow me to use her lab's motion capture facilities for my experiments.
 
 I would also like to thank Dr.~Loc Tran and Mr.~James Neilan of NASA Langley and Ralph Williams of Analytical Mechanics Associates, who collectively provided me with hours of programming guidance during my time at the Autonomy Incubator.
 
