--- a/Exp_Results.tex
+++ b/Exp_Results.tex
@@ -2,9 +2,9 @@
 
 \section{Long Walk Trials} \label{sec:long_walk}
 
-Figures~\ref{fig:longWalk1_xyz}--\ref{fig:longWalk5_xyz} plot the vehicle's $x$-, $y$-, and $z$-coordinates over time. These plots demonstrate that the UKF's pose estimates were able to track the vehicle's $y$-position accurately over the length of each long walk trial. The plots also show that the UKF pose estimates exhibit aberrant behavior causing the vehicle's $z$-position to rise more and more the farther the vehicle moves from the origin. The shaded region in Figure~\ref{fig:longWalk1_xyz} clearly highlights this behavior. The vehicle's estimated altitude rises steadily to a maximum of about 1.4~meters, although in truth the vehicle's altitude remained constant throughout the trial. The vehicle's maximum vertical error coincides with its maximal displacement from $\left( 0,\ 0,\ 0 \right)$.
+Figures~\ref{fig:longWalk1_xyz}--\ref{fig:longWalk5_xyz} plot the vehicle's $x$-, $y$-, and $z$-coordinates over time. These plots demonstrate that the UKF's pose estimates were able to track the vehicle's $y$-position accurately over the length of each long walk trial. The plots also show that the UKF pose estimates exhibit aberrant behavior causing the vehicle's $z$-position to rise more and more the farther the vehicle moves from the origin. The shaded regions in Figures~\ref{fig:longWalk1_xyz}--\ref{fig:longWalk5_xyz} clearly highlight this behavior. In each plot, the vehicle's estimated altitude rises steadily to a maximum of about 1.4~meters, although in truth the vehicle's altitude remained constant in all trials. The maximum vertical error coincides with its maximal displacement from the origin at $\left( 0,\ 0,\ 0 \right)$.
 
-In each trial, the UKF output showed increased ``shakiness'' in the form of large oscillations as the vehicle's $y$-position increased. As the mobile test stand moved farther and farther away from the origin, visualizations of the output showed erroneous vertical spikes as the altitude generally trended upward. The magnitude of these spikes increased with displacement from the origin, always achieving a maximal magnitude at the point of maximal displacement. Moreover, this behavior was coupled with aberrant displacements along the $x$-axis as well. This behavior seems to follow the supposition posited in Chapter~\ref{ch:Exp_Design} that the ROS PTAM implementation was not correctly eliminating lens distortion and, as a result, was perceiving a bowl-shaped world. If PTAM's view of the environment were curved, the large erroneous readings in $x$ and $z$ would reasonably be coupled to displacement along the $y$-axis, as the $y$-displacement would affect the vehicle's ``height'' along the inside of the ``bowl.'' The farther the vehicle moved from the bottom of the bowl at the origin, the more $z$ would increase and the more $x$ would become susceptible to overestimating small lateral perturbations. This trend can be seen, to varying degrees, in all five trials, with maximal error in the $z$ coordinate being accompanied by maximal ``shakiness'' in the $x$ coordinate---all coinciding with maximal displacement from the origin.
+In each trial, the UKF output showed increased ``shakiness'' in the form of large oscillations as the vehicle's $y$-position increased. As the mobile test stand moved farther and farther away from the origin, visualizations of the output showed erroneous vertical spikes as the altitude generally trended upward. The magnitude of these spikes increased with displacement from the origin, always achieving a maximal magnitude at the point of maximal displacement. Moreover, this behavior was coupled with aberrant displacements along the $x$-axis as well. This behavior seems to follow the supposition posited in Chapter~\ref{ch:Exp_Design} that the ROS PTAM implementation was not correctly eliminating lens distortion and, as a result, was perceiving a bowl-shaped world. If PTAM's view of the environment were curved, the large erroneous readings in $x$ and $z$ would reasonably be coupled to displacement along the $y$-axis, as the $y$-displacement would affect the vehicle's ``height'' along the inside of the ``bowl.'' The farther the vehicle moved from the bottom of the bowl (that is, the origin), the more $z$ would increase and the more $x$ would become susceptible to overestimating small perturbations. This trend can be seen, to varying degrees, in all five trials, with maximal error in the $z$ coordinate being accompanied by maximal ``shakiness'' in the $x$ coordinate---all coinciding with maximal displacement from the origin.
 
 \begin{figure}[H]
   \centering
@@ -44,9 +44,9 @@ In each trial, the UKF output showed increased ``shakiness'' in the form of larg
 
 \section{Box Pattern Trials}
 
-Figures~\ref{fig:box1_3d}, \ref{fig:box2_3d}, \ref{fig:box3_3d}, \ref{fig:box4_3d}, and \ref{fig:box5_3d} plot the estimated and Vicon-measured 3D trajectories of the mobile test stand during the five box pattern trials. Each of these plots exhibits the same bowl-shaped distortion seen previously in the trials of the long walk experiment. The $z$-position of the vehicle can be seen trending upward more and more the farther the vehicle moves from the origin. This causes the apparent slant in the estimated trajectories. This altitudinal error is most pronounced at the forward-left corner in each 3D plot, where the vehicle is farthest from the origin. The estimated trajectory also becomes noticeably shakier, in terms of vertical oscillations, in the neighborhood of the forward-left corner. These oscillations begin to appear on the first (right-side) leg of the trajectory and increase in magnitude up to the forward-left corner, at which point they begin to decrease in magnitude on the way back to the starting position.
+Figures~\ref{fig:box1_3d}, \ref{fig:box2_3d}, \ref{fig:box3_3d}, \ref{fig:box4_3d}, and \ref{fig:box5_3d} plot the UKF-estimated and Vicon-measured 3D trajectories of the mobile test stand during the five box pattern trials. Each of these plots exhibits the same bowl-shaped distortion seen previously in the trials of the long walk experiment. The $z$-position of the vehicle can be seen trending upward more and more the farther the vehicle moves from the origin. This causes the apparent slant in the estimated trajectories. This altitudinal error is most pronounced at the forward-left corner in each 3D plot, where the vehicle is farthest from the origin. The estimated trajectory also becomes noticeably shakier, in terms of vertical oscillations, in the neighborhood of the forward-left corner. These oscillations begin to appear on the first (right-side) leg of the trajectory and increase in magnitude up to the forward-left corner, at which point they begin to decrease in magnitude on the way back to the starting position.
 
-The 2D trajectory plots (Figures~\ref{fig:box1_2d}, \ref{fig:box2_2d}, \ref{fig:box3_2d}, \ref{fig:box4_2d}, and \ref{fig:box5_2d}) are presented alongside the 3D plots to demonstrate the general accuracy of the UKF's estimates in planar motion. The UKF output follows the Vicon output faithfully, with some exceptions near the corners of the box pattern. This is caused partly by the bowl-shaped distortion mentioned previously, and partly by the fact that the mobile test stand moves on caster wheels. When the test stand changes direction, the caster wheels rotate underneath the cart, causing a small lateral shift in the test stand's trajectory. This is particularly apparent in Figures~\ref{fig:box2_2d} and \ref{fig:box4_2d}, where a clear ``wiggling'' can be seen as the vehicle was pulled back from the top left corner of the pattern, and in Figure~\ref{fig:box5_2d}, where the estimated trajectory ``sags'' in the bottom left corner. These lateral disturbances, though small in magnitude (likely on the order of 3--5~cm), were picked up by PTAM and overestimated due to lens distortion.
+The 2D trajectory plots (Figures~\ref{fig:box1_2d}, \ref{fig:box2_2d}, \ref{fig:box3_2d}, \ref{fig:box4_2d}, and \ref{fig:box5_2d}) are presented alongside the 3D plots to demonstrate the general accuracy of the UKF's estimates in planar motion. The UKF output follows the Vicon output faithfully, with some exceptions near the corners of the box pattern. This is caused partly by the bowl-shaped distortion mentioned previously, and partly by the fact that the mobile test stand moves on caster wheels. When the test stand changes direction, the caster wheels rotate underneath the test stand, causing a small lateral shift in the test stand's trajectory. This is particularly apparent in Figures~\ref{fig:box2_2d} and \ref{fig:box4_2d}, where a clear ``wiggling'' can be seen as the vehicle was pulled back from the top left corner of the pattern, and in Figure~\ref{fig:box5_2d}, where the estimated trajectory ``sags'' in the bottom left corner. These lateral disturbances, though small in magnitude (likely on the order of 3--5~cm), were picked up by PTAM and overestimated due to lens distortion.
 
 Trial~3 (Figures~\ref{fig:box3_2d} and \ref{fig:box3_3d}) exhibits an anomalous $x$-directional offset along the first leg of the trajectory. This was most likely caused by inadvertent jostling of the test stand before initializing PTAM. The test stand was rotated at an angle to Vicon's $x$-axis at the outset of the trial, causing the estimated trajectory to be computed at an angle to the ground truth trajectory. Once the test stand reached the first corner, it must have been rotated slightly, causing the estimated trajectory to rejoin the ground truth measurements provided by Vicon.
 
@@ -142,7 +142,7 @@ Positional errors in the UKF output were computed after each box pattern trial p
 These coordinate errors were computed over the length of each time history, creating an error history for each trial. The mean coordinate errors and their variances were then computed from these error histories to characterize the Gaussian noise distribution in each data set. The terms $\mu_{x}$, $\mu_{y}$, and $\mu_{z}$ encode the mean error in $x$, $y$, and $z$, respectively. The associated variances of these errors are represented by $\sigma_{x}^{2}$, $\sigma_{y}^{2}$, and $\sigma_{z}^{2}$. These statistics are presented in Table~\ref{tab:means_and_vars}.
 
 \begin{table}[h]\centering
-\caption[Coordinate Error Mean and Variance Values]{Coordinate error mean and variance values by trial.}
+\caption[Coordinate Error Mean and Variance Values by Trial]{Coordinate error mean and variance values by trial.}
 \begin{tabular}[c]{crr|rr|rr}
 \toprule
 Trial & $\mu_{x}$ [m] & $\sigma_{x}^{2}$ [m$^{2}$] & $\mu_{y}$ [m] & $\sigma_{y}^{2}$ [m$^{2}$] & $\mu_{z}$ [m] & $\sigma_{z}^{2}$ [m$^{2}$] \\
@@ -176,7 +176,7 @@ The norm of this error vector is the total Euclidean offset $\| \bm{\varepsilon}
 The total Euclidean offset encodes the straight-line distance between ground truth and the estimated position, providing a measure of total positional error at each point in time. The total Euclidean offset was computed over the entire error history in order to characterize the evolution of the error over time. This total error history was then analyzed for each experimental trial to determine the mean total error and maximum total error (Table~\ref{tab:total_err}).
 
 \begin{table}[h]\centering
-\caption[Mean Total Error and Maximum Total Error]{Mean total error and maximum total error by trial.}
+\caption[Mean Total Error and Maximum Total Error by Trial]{Mean total error and maximum total error by trial.}
 \begin{tabular}[c]{crr}
 \toprule
 Trial & Mean $\| \bm{\varepsilon} \|$ [m] & Maximum $\| \bm{\varepsilon} \|$ [m] \\
@@ -195,19 +195,19 @@ Trial & Mean $\| \bm{\varepsilon} \|$ [m] & Maximum $\| \bm{\varepsilon} \|$ [m]
 \label{tab:total_err}
 \end{table}
 
-Table~\ref{tab:total_err} shows that the system ran with a mean total error of 0.0668~m and a maximum error of 0.2596~m, indicating that the system was able to estimate the vehicle's position consistently with sub-meter accuracy over the length of each trial. The maximum error, though large, still falls within the 4.9-m radius that is realizable with today's smartphone GPS receivers \cite{GpsGov}, suggesting that the system could prove to be a reasonable choice for navigating environments where centimeter-level accuracy is not required.
+Table~\ref{tab:total_err} shows that the system ran with a mean total error of 0.0668~m and a maximum total error of 0.2596~m, indicating that the system was able to estimate the vehicle's position consistently with sub-meter accuracy over the length of each trial. The maximum total error, though large, still falls within the 4.9-m radius that is realizable with today's smartphone GPS receivers \cite{GpsGov}, suggesting that the system could prove to be a reasonable choice for navigating environments where centimeter-level accuracy is not required.
 
 \begin{figure}[h]
   \centering
     \includegraphics[width=0.6\textwidth]{box_error_diagram}
-  \caption[Box Pattern Error Behavior]{The system exhibits altitudinal error which increases as the vehicle moves farther from the origin and decreases as the vehicle returns to the origin.}
+  \caption[Example of Box Pattern Error Behavior]{The system exhibits altitudinal error which increases as the vehicle moves farther from the origin and decreases as the vehicle returns to the origin.}
   \label{fig:box_error_diagram}
 \end{figure}
 
 In real-world applications, it is common for a SLAM algorithm to exhibit error as a function of both total displacement and mission time, with drift increasing over time as the vehicle moves. It is noteworthy, then, that the UKF's output exhibited error only as a function of total displacement, specifically \textit{from the origin}. Figure~\ref{fig:box_error_diagram} demonstrates how the UKF's error grew as the vehicle moved farther from the origin, but decreased as the vehicle returned to the origin, producing a consistently bowl-shaped distortion in the estimated trajectory. The UKF's output also showed no obvious drift as a function of time during periods when the vehicle was stationary. This error behavior is confirmed by the final coordinate error and final total error values presented in Table~\ref{tab:final_err}. 
 
 \begin{table}[h]\centering
-\caption[Final Coordinate Error and Final Total Error]{Final coordinate error and total error by trial.}
+\caption[Final Coordinate Error and Final Total Error by Trial]{Final coordinate error and final total error by trial.}
 \begin{tabular}[c]{crrrr}
 \toprule
 Trial & Final $\varepsilon_{x}$ [m] & Final $\varepsilon_{y}$ [m] & Final $\varepsilon_{z}$ [m] & Final $\| \bm{\varepsilon} \|$ [m] \\
